---
title: Extended ERD - Banking Products and Multi-Entity Operations
config:
  er:
    fontSize: 30
    entityPadding: 30
---
erDiagram
    BORROWER ||--o{ SAVINGS_ACCOUNT : owns
    BORROWER ||--o{ FIXED_DEPOSIT : owns
    BORROWER ||--o{ CURRENT_ACCOUNT : owns
    LOCAL_BANK ||--o{ LOAN_GROUP : hosts
    LOAN_GROUP ||--o{ GROUP_MEMBER : includes
    BORROWER ||--o{ GROUP_MEMBER : participates
    LOCAL_BANK ||--o| INSURANCE_FUND : maintains

    LOCAL_BANK ||--o{ INTERBANK_LOAN : lends_as_lb
    NATIONAL_BANK ||--o{ INTERBANK_LOAN : lends_as_nb
    LOCAL_BANK ||--o{ UPWARD_DEPOSIT : deposits_surplus
    NATIONAL_BANK ||--o{ UPWARD_DEPOSIT : receives_surplus

    NATIONAL_BANK ||--o{ SYNDICATE : lead_arranges
    SYNDICATE ||--o{ SYNDICATE_MEMBER : has_member
    LOCAL_BANK ||--o{ SYNDICATE_MEMBER : subscribes
    SYNDICATE ||--o| LOAN : funds_loan

    LOCAL_BANK ||--o{ TRANCHED_POOL : operates_pool
    TRANCHED_POOL ||--o{ LOAN : tranche_funds

    NATIONAL_BANK ||--o{ TREASURY_SWAP : executes_swap
    LOCAL_BANK ||--o{ TREASURY_SWAP : receives_swap

    NATIONAL_BANK ||--o{ NETTING_BATCH : coordinates
    NETTING_BATCH ||--o{ NETTING_ENTRY : contains
    LOCAL_BANK ||--o{ NETTING_ENTRY : settles

    SAVINGS_ACCOUNT {
        bigint account_id PK
        bigint borrower_id FK
        numeric balance
        numeric yield_bps
    }
    LOAN_GROUP {
        bigint group_id PK
        bigint local_bank_id FK
        int member_count
        numeric shared_collateral
    }
    GROUP_MEMBER {
        bigint group_id FK
        bigint borrower_id FK
        numeric share
        string consent_sig
    }
    INTERBANK_LOAN {
        bigint loan_id PK
        bigint lender_bank_id FK
        bigint borrower_bank_id FK
        numeric principal
        string status
    }
    SYNDICATE {
        bigint syndicate_id PK
        bigint lead_arranger_id FK
        numeric total_amount
        string status
    }
    TRANCHED_POOL {
        bigint pool_id PK
        bigint local_bank_id FK
        numeric senior_principal
        numeric junior_principal
    }
    NETTING_BATCH {
        bigint batch_id PK
        int tier
        string batch_root
    }
